Fix setting input borders overlapping message previews

--- a/src/plugins/customTimestamps/style.css
+++ b/src/plugins/customTimestamps/style.css
@@ -14,4 +14,5 @@
     top: -8px;
     border: solid grey 1px;
     border-radius: 5px;
+    z-index: 9999;
 }
